syntax = "proto3";

package pvz_v1;

import "google/protobuf/timestamp.proto";

option go_package = "github.com/MaksimovDenis/pvz_grpc/pkg/pvz_v1;pvz_v1";

service PVZService {
    rpc GetPVZList(GetPVZListRequest) returns (GetPVZListResponse);
  }
  
  message PVZ {
    string id = 1;
    google.protobuf.Timestamp registration_date = 2;
    string city = 3;
  }
  
  enum ReceptionStatus {
    RECEPTION_STATUS_IN_PROGRESS = 0;
    RECEPTION_STATUS_CLOSED = 1;
  }
  
  message GetPVZListRequest {}
  
  message GetPVZListResponse {
    repeated PVZ pvzs = 1;
  }